fix: wrap max-width

--- a/common/common.scss
+++ b/common/common.scss
@@ -73,6 +73,11 @@ body {
   z-index: -1;
 }
 
+// wrap -------------------------------
+.wrap {
+  max-width: 1280px;
+}
+
 // header -------------------------------
 .d-header {
   border-bottom: 1px solid var(--header-border);
